--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>my test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <p><h1>「WEBコンテンツの作成」の成果</h1></p>
+    <p><h2>本テーマについて</h2></p>
+    <p>(ここには皆さんが取り組んだプロジェクト課題について書きましょう.)(200字以上)</p>
+    <p>プロジェクト課題で作成したページ：<a  href="project.html" title="プロジェクト課題" target="_blank">project.html </a>  </p>
+    <p><h2>数当てゲーム</h2></p>
+    <p>(このテーマの第3回から数当てゲームを作りますので、その後にゲームの概要を説明してください.)(200字以上)</p>
+    <p>数当てゲームのページ:kazuate.html</p>
+    <p><h2>各授業回の学習事項</h2></p>
+    <p><h3>第1回WWWとHTML</h3></p>
+    <p>(今回学習した事柄を説明してください)(100字以上)</p>
+    <p>演習の成果:
+      <a  href="https://www.nishita-lab.org/web-contents/text/1html/1_5_1exercise.html"
+          title="演習1-4" 
+        target="_blank">演習1-4のさまざまな要素 
+      </a>   
+    </p>
+    <p><h2>第2回CSSによるWebページの装飾</h2></p>
+    <p><h2>第3回JavaScriptの基本</h2></p>
+    <p><h2>第4回DOMとJavaScript</h2></p>
+    <p><h2>第5回イベント処理</h2></p>
+
   </body>
 </html>
