世界の天気

--- a/project.html
+++ b/project.html
@@ -6,6 +6,7 @@
   </head>
   <body>
    <p><h1>世界の天気(検索結果1件)</h1></p>
+   <p><from><input></from></p>
    <p><ul>
     <li>経緯:116.3972</li>
     <li>経度:39.9075</li>
