--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <p><h3>第1回WWWとHTML</h3></p>
     <p>(今回学習した事柄を説明してください)(100字以上)</p>
     <p>演習の成果:
-      <a  href="https://www.nishita-lab.org/web-contents/text/1html/1_5_1exercise.html"
-          title="演習1-4" 
-        target="_blank">演習1-4のさまざまな要素 
+      <a  href="practice-html/structure.html"
+          title="演習1-3" 
+        target="_blank">演習1-3のさまざまな要素 
       </a>   
     </p>
     <p><h2>第2回CSSによるWebページの装飾</h2></p>
