--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p><h3>第1回WWWとHTML</h3></p>
     <p>(今回学習した事柄を説明してください)(100字以上)</p>
     <p>演習の成果:
-      <a  href="practice-html/structure.html"
+      <a  href="practice-html/elements.html"
           title="演習1-4" 
         target="_blank">演習1-4のさまざまな要素 
       </a>   
