--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>my test page</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <p><h1>「WEBコンテンツの作成」の成果</h1></p>
