--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <p>数当てゲームのページ:kazuate.html</p>
     <p><h2>各授業回の学習事項</h2></p>
     <p><h3>第1回WWWとHTML</h3></p>
-    <p>(今回学習した事柄を説明してください)(100字以上)</p>
+    <p>この回では文字の大きさの変化の仕方、二種類の箇条書きの入力の仕方、リンクの貼り方、画像の貼り付け方などを学びました。また、いくつかの要素とその編集の仕方や、ギットハブへの保存の仕方及びページの表示のさせ方なども学びました。
+    </p>
     <p>演習の成果:
       <a  href="practice-html/elements.html"
           title="演習1-4" 
