--- a/project.html
+++ b/project.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>世界の天気</title>
+    <link rel="stylesheet" href="project.css">
   </head>
   <body>
    <p><h1>世界の天気(検索結果1件)</h1></p>
