--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <p><h2>第2回CSSによるWebページの装飾</h2></p>
     <p>この回では、cssでの文字の色の変え方、書体の変え方、影の付け方、その影の位置や色の変え方、枠の作り方とその枠のレイアウトの変え方、リンクの色の変え方、リンクに入ると、リンクの色を変えるようにするやり方、背景の色の変え方などを学びました。</p>
     <p>演習の成果:
-      <a  href="practice-css/browser-intro(1).html"
-          title="browser-intro(1).html" 
-        target="_blank">browser-intro(1).html
+      <a  href="practice-css/browser-intro.html"
+          title="browser-intro.html" 
+        target="_blank">browser-intro.html
       </a>   
     </p>
     <p><h2>第3回JavaScriptの基本</h2></p>
