--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <p>プロジェクト課題で作成したページ：<a  href="project.html" title="プロジェクト課題" target="_blank">project.html </a>  </p>
     <p><h2>数当てゲーム</h2></p>
     <p>(このテーマの第3回から数当てゲームを作りますので、その後にゲームの概要を説明してください.)(200字以上)</p>
-    <p>数当てゲームのページ:kazuate.html</p>
+    <p><a  href="practice-js/kazuate.html"
+           title="kazuate.html" 
+        target="_blank">kazuate.html
+      </a>  
+   </p>
     <p><h2>各授業回の学習事項</h2></p>
     <p><h3>第1回WWWとHTML</h3></p>
     <p>この回では文字の大きさの変化の仕方、二種類の箇条書きの入力の仕方、リンクの貼り方、画像の貼り付け方などを学びました。また、いくつかの要素とその編集の仕方や、ギットハブへの保存の仕方及びページの表示のさせ方なども学びました。
