--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>(ここには皆さんが取り組んだプロジェクト課題について書きましょう.)(200字以上)</p>
     <p>プロジェクト課題で作成したページ：<a  href="project.html" title="プロジェクト課題" target="_blank">project.html </a>  </p>
     <p><h2>数当てゲーム</h2></p>
-    <p>(このテーマの第3回から数当てゲームを作りますので、その後にゲームの概要を説明してください.)(200字以上)</p>
+    <p>ランダムに生成される数字と自分が入力した数字を合わせるゲームです。まず、1~10の数字を入力してください。すると、プログラムが正誤判定をしてくれます。あっていれば『正解!』と表示され、間違っていたら入力した数が答えより小さい、または大きいかを教えてくれます。そのチャンスをもとに答えを求めましょう!チャンスは3回までです。</p>
     <p><a  href="practice-js/kazuate.html"
            title="kazuate.html" 
         target="_blank">kazuate.html
