--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>世界の天気</title>
     <link rel="stylesheet" href="project.css">
-    <script src="kazuate.js" defer></script>
+    <script src="weather.js" defer></script>
   </head>
   <body>
    <p><h1>世界の天気(検索結果1件)</h1></p>
