--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
       </a>   
     </p>
     <p><h2>第3回JavaScriptの基本</h2></p>
+    <p>演習の成果:
+      <a  href="practice-js/obj-practice.html"
+          title="obj-practice.html" 
+        target="_blank"> obj-practice.html
+      </a>   
+    </p>
     <p><h2>第4回DOMとJavaScript</h2></p>
     <p><h2>第5回イベント処理</h2></p>
 
