--- a/practice-html/index.html
+++ b/practice-html/index.html
@@ -13,7 +13,7 @@
     <p><h2>数当てゲーム</h2></p>
     <p>ランダムに生成される数字と自分が入力した数字を合わせるゲームです。まず、1~10の数字を入力してください。すると、プログラムが正誤判定をしてくれます。あっていれば『正解!』と表示され、間違っていたら入力した数が答えより小さい、または大きいかを教えてくれます。そのチャンスをもとに答えを求めましょう!チャンスは3回までです。</p>
     <p><a  href="practice-js/kazuate.html"
-           title="kazuate.html" 
+           title="数当てゲーム" 
         target="_blank">kazuate.html
       </a>  
    </p>
