--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
       </a>   
     </p>
     <p><h2>第4回DOMとJavaScript</h2></p>
+    <a  href="practice-dom/dom-exercise.html"
+          title="dom-exercise.html" 
+        target="_blank"> dom-exercise.html
+      </a>
     <p><h2>第5回イベント処理</h2></p>
 
   </body>
