--- a/kazuate.html
+++ b/kazuate.html
@@ -9,7 +9,8 @@
   <body>
     <h1>数当てゲーム</h1>
     <label for="list">1から10の間の整数:</label>
-    <imput type="text"name="yoso"size="1"></imput>
+    <input type="text "name="yoso" size="1">
+
     <button id="print">回答</button>
     <p><span id="kaisu">0</span>回目の予想: <span id="answer">❔</span></p>
     <p id="result"></p>
