--- a/project.html
+++ b/project.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="project.css">
     <script src="weather.js" defer></script>
   </head>
+  <div id="result"></div>
+    </body>
+  </html>
   <body>
-   <p><h1>世界の天気(検索結果1件)</h1></p>
-   <p><from><input></from></p>
+   <p><h1>世界の天気</h1></p>
+   <label for="list">都市の検索（ID）</label>
+   <input type="search "name="basho" size="10"></input>
+
+   
+   
    <p><ul>
     <li>経緯:116.3972</li>
     <li>経度:39.9075</li>
