--- a/kazuate.html
+++ b/kazuate.html
@@ -6,10 +6,10 @@
     <script src="kazuate.js" defer></script>
   </head>
 
-  <body>
+  <input>
     <h1>数当てゲーム</h1>
     <label for="list">1から10の間の整数:</label>
-    <input type="text "name="yoso" size="1">
+    <input type="text "name="yoso" size="1"></input>
 
     <button id="print">回答</button>
     <p><span id="kaisu">0</span>回目の予想: <span id="answer">❔</span></p>
