--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <p><h2>数当てゲーム</h2></p>
     <p>ランダムに生成される数字と自分が入力した数字を合わせるゲームです。まず、1~10の数字を入力してください。すると、プログラムが正誤判定をしてくれます。あっていれば『正解!』と表示され、間違っていたら入力した数が答えより小さい、または大きいかを教えてくれます。そのチャンスをもとに答えを求めましょう!チャンスは3回までです。</p>
     <p><a  href="kazuate.html"
-           title="kazuate.html" 
-        target="_blank">kazuate.html
+           title="数当てゲーム" 
+        target="_blank">数当てゲーム
       </a>  
    </p>
     <p><h2>各授業回の学習事項</h2></p>
@@ -31,23 +31,26 @@
     <p>この回では、cssでの文字の色の変え方、書体の変え方、影の付け方、その影の位置や色の変え方、枠の作り方とその枠のレイアウトの変え方、リンクの色の変え方、リンクに入ると、リンクの色を変えるようにするやり方、背景の色の変え方などを学びました。</p>
     <p>演習の成果:
       <a  href="practice-css/browser-intro.html"
-          title="browser-intro.html" 
-        target="_blank">browser-intro.html
+          title="練習2-3" 
+        target="_blank">練習2-3
       </a>   
     </p>
     <p><h2>第3回JavaScriptの基本</h2></p>
     <p>演習の成果:
       <a  href="practice-js/obj-practice.html"
-          title="obj-practice.html" 
-        target="_blank"> obj-practice.html
+          title="練習3-6" 
+        target="_blank"> 練習3-6
       </a>   
     </p>
     <p><h2>第4回DOMとJavaScript</h2></p>
     <a  href="practice-dom/dom-exercise.html"
-          title="dom-exercise.html" 
-        target="_blank"> dom-exercise.html
+          title="練習4-2,4-5" 
+        target="_blank"> 練習4-2,4-5
       </a>
     <p><h2>第5回イベント処理</h2></p>
-
+    <a  href="practice-event/event-list.html"
+          title="練習問題5-3" 
+        target="_blank"> 練習問題5-3
+      </a>
   </body>
 </html>
