--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <p>プロジェクト課題で作成したページ：<a  href="project.html" title="プロジェクト課題" target="_blank">project.html </a>  </p>
     <p><h2>数当てゲーム</h2></p>
     <p>ランダムに生成される数字と自分が入力した数字を合わせるゲームです。まず、1~10の数字を入力してください。すると、プログラムが正誤判定をしてくれます。あっていれば『正解!』と表示され、間違っていたら入力した数が答えより小さい、または大きいかを教えてくれます。そのチャンスをもとに答えを求めましょう!チャンスは3回までです。</p>
-    <p><a  href="kazuate.html"
+    <p>演習の成果:
+      <a  href="kazuate.html"
            title="数当てゲーム" 
         target="_blank">数当てゲーム
       </a>  
@@ -43,14 +44,19 @@
       </a>   
     </p>
     <p><h2>第4回DOMとJavaScript</h2></p>
-    <a  href="practice-dom/dom-exercise.html"
+    <p>演習の成果:
+      <a  href="practice-dom/dom-exercise.html"
           title="練習4-2,4-5" 
         target="_blank"> 練習4-2,4-5
       </a>
+    </p>
     <p><h2>第5回イベント処理</h2></p>
-    <a  href="practice-event/event-list.html"
+    <p>演習の成果:
+      <a  href="practice-event/event-list.html"
           title="練習問題5-3" 
         target="_blank"> 練習問題5-3
       </a>
+
+    </p>
   </body>
 </html>
