--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
       </a>   
     </p>
     <p><h2>第3回JavaScriptの基本</h2></p>
+    <p>この回では、wedページを作る上で必要なJavaScriptについて学びました。オブジェクトの参照と代入や、配列の要素の一つずつに対して処理を行うfor-of構文、プログラムのデバッグなど、基本的なことでしたが、javaと構文が似てるものがあるとはいえ、かなり難しく、慣れるためには、もっと時間と練習が必要だと感じました。</p>
     <p>演習の成果:
       <a  href="practice-js/obj-practice.html"
           title="練習3-6" 
         target="_blank"> 練習3-6
       </a>   
-    </p>
+    </p>この回では、DOMの基礎知識を学びました。DOMはDocument Object Modelの略でhtmlやcssをjavascriptから書き換えることができるプログラムのことであり、document.createElement構文を使用することで新しい要素を作成したり、setAttribute構文でhrefやsrcなどの属性を自由に設定することができます。 今回は近くの人と助け合いなんとか終わったという感じだったので、プログラムの意味を理解できるようになりたいと思いました。 
     <p><h2>第4回DOMとJavaScript</h2></p>
+    <p></p>
     <p>演習の成果:
       <a  href="practice-dom/dom-exercise.html"
           title="練習4-2,4-5" 
@@ -51,6 +53,7 @@
       </a>
     </p>
     <p><h2>第5回イベント処理</h2></p>
+    <p>この回では、ボタン、テキストボックスなどを追加するものを作りました。まず、イベントハンドラを登録が必要で、○.addEventListener('△△', □□);というプログラムを使います。 その後、イベントハンドラの定義をプログラムします。○.addEventListener('△△', □□); △△を変えることで、クリックで変化したり、キーボードで表示が変化したりします。 </p>
     <p>演習の成果:
       <a  href="practice-event/event-list.html"
           title="練習問題5-3" 
