--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
           title="練習3-6" 
         target="_blank"> 練習3-6
       </a>   
-    </p>この回では、DOMの基礎知識を学びました。DOMはDocument Object Modelの略でhtmlやcssをjavascriptから書き換えることができるプログラムのことであり、document.createElement構文を使用することで新しい要素を作成したり、setAttribute構文でhrefやsrcなどの属性を自由に設定することができます。 今回は近くの人と助け合いなんとか終わったという感じだったので、プログラムの意味を理解できるようになりたいと思いました。 
-    <p><h2>第4回DOMとJavaScript</h2></p>
-    <p></p>
+    </p>
+    <p>この回では、DOMの基礎知識を学びました。DOMはDocument Object Modelの略でhtmlやcssをjavascriptから書き換えることができるプログラムのことであり、document.createElement構文を使用することで新しい要素を作成したり、setAttribute構文でhrefやsrcなどの属性を自由に設定することができます。 今回は近くの人と助け合いなんとか終わったという感じだったので、プログラムの意味を理解できるようになりたいと思いました。 </p>
     <p>演習の成果:
       <a  href="practice-dom/dom-exercise.html"
           title="練習4-2,4-5" 
