--- a/project.html
+++ b/project.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>世界の天気</title>
-    <link rel="stylesheet" href="project.css">
-    <script src="weather.js" defer></script>
-  </head>
-  <div id="result"></div>
-    </body>
-  </html>
-  <body>
-   <p><h1>世界の天気</h1></p>
-   <label for="list">都市の検索（ID）</label>
-   <input type="search "name="basho" size="10"></input>
 
-   
-   
-   <p><ul>
-    <li>経緯:116.3972</li>
-    <li>経度:39.9075</li>
-    <li>天気:曇りがち</li>
-    <li>最低気温:9.94</li>
-    <li>最高気温:9.94</li>
-    <li>湿度:14</li>
-    <li>風速:2.65</li>
-    <li>風向:197</li>
-    <li>都市名:北京市</li>
-   </ul></p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>世界の天気</title>
+  <link rel="stylesheet" href="project.css">
+  <script src="weather.js" defer></script>
+</head>
+<div id="result"></div>
+</body>
+
+</html>
+
+<body>
+  <p>
+  <h1>世界の天気</h1>
+  </p>
+  <label for="list">都市の検索</label>
+  <select id="mati" name="mati">
+    <option value=" 360630">カイロ（エジプト）</option>
+    <option value=" 524901">モスクワ（ロシア）</option>
+    <option value="993800">ヨハネスブルク（南アフリカ）</option>
+    <option value="1816670">北京（中華人民共和国）</option>
+    <option value="1850147">東京（日本）</option>
+    <option value="1880252">シンガポール</option>
+    <option value="2147714">シドニー（オーストラリア）</option>
+    <option value="2643743">ロンドン（イギリス）</option>
+    <option value=" 2968815">パリ（フランス）</option>
+    <option value=" 3451189">リオデジャネイロ（プラジル）</option>
+    <option value="5128581">ニューヨーク（アメリカ合衆国）</option>
+    <option value="'5368361">ロサンゼルス（アメリカ合来国）</option>
+  </select>
+
+  <button id="botton">検索</button>
+  <h3>
+    <div class="list">
+      <h2>
+        <div class="tosimei">都市名:
+          <span id="a1"></span>
+        </div>
+      </h2>
+      <div
+
+  </h3>
+
+
+</body>
+
 </html>
