--- a/project.html
+++ b/project.html
@@ -40,8 +40,28 @@
           <span id="a1"></span>
         </div>
       </h2>
-      <div
-
+      <div class="tenki">天気:
+        <span id="a2"></span>
+      </div>
+      <div class="heikin">平均気温:
+        <span id="a7"></span>
+      </div>
+      <div class="saiko">最高気温:
+        <span id="a5"></span>
+      </div>
+      <div class="saitei">最低気温:
+        <span id="a6"></span>
+      </div>
+      <div class="situdo">湿度:
+        <span id="a9"></span>
+      </div>
+      <div class="husoku">風速:
+        <span id="a3"></span>
+      </div>
+      <div class="muki">風向き:
+        <span id="a4"></span>
+      </div>
+    </div>
   </h3>
 
 
