--- a/project.html
+++ b/project.html
@@ -13,9 +13,7 @@
 </html>
 
 <body>
-  <p>
-  <h1>世界の天気</h1>
-  </p>
+  <p><h1>世界の天気</h1></p>
   <label for="list">都市の検索</label>
   <select id="mati" name="mati">
     <option value=" 360630">カイロ（エジプト）</option>
