--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <p><h1>「WEBコンテンツの作成」の成果</h1></p>
     <p><h2>本テーマについて</h2></p>
-    <p>(ここには皆さんが取り組んだプロジェクト課題について書きましょう.)(200字以上)</p>
+    <p>HTML、CSS、JavaScriptを使って、webページの構造の記述、文字の大きさや色などの見た目の変更、 画像などの追加をします。そして、DOMを使って、コンテンツの内容を読み取ったり、変更をしたり、 ボタンや、テキスト入力の追加などをして、webを作成します。</p>
     <p>プロジェクト課題で作成したページ：<a  href="project.html" title="プロジェクト課題" target="_blank">project.html </a>  </p>
     <p><h2>数当てゲーム</h2></p>
     <p>ランダムに生成される数字と自分が入力した数字を合わせるゲームです。まず、1~10の数字を入力してください。すると、プログラムが正誤判定をしてくれます。あっていれば『正解!』と表示され、間違っていたら入力した数が答えより小さい、または大きいかを教えてくれます。そのチャンスをもとに答えを求めましょう!チャンスは3回までです。</p>
