--- a/index.html
+++ b/index.html
@@ -61,5 +61,7 @@
       </a>
 
     </p>
+    <p><h2>第6回 工夫点、苦心点、強調点、感想</h2></p>
+    <p>この講義では合計6回に分けて一つのWEBページを作成しました。HTML、CSS、JavaScriptを使って、webページを作りました。初めてこれらを使ってwebページを作ったので、かなり苦労するところや、面白いなと思うものもたくさんありました。私が一番苦労したのは、第4回のDOMの演習と、数あてです。第4回の演習の方では、何を打ち込めばいいのかがわからなかったり、そもそも今何をしたいのかがわからなかったりと、とても苦労しました。また、画像を貼り付ける際に変なところに出てきたり、大きさが合わなかったりで大変でした。最初の頃は、HTMLでのwebの構成で簡単なのかもと思っていましたが、進めていくうちにどんどん内容が複雑になっていって、domのところからはもう全くわからなくなりました。数あては、何度も試行を繰り返し、時にパソコンにムカつきながら取り組んでいました。しかし、先生や先輩方の助けもあってなんとか終えることができました。 プロジェクト課題では、天気がなかなか表示されず苦労しました。最初は自分一人じゃとてもじゃないけど終わらないと思っていましたが、最終的には自分が思っていた以上にいいwebサイトができたのではないかと思いました。自分的には、都市名の表示で国旗が表示されたり、最高、最低気温の表示のされ方で、何度以下だったらこれを表示するみたいなものができたらもう少しいいものができたのではないかと感じました。自分でサイトを作ってみたことによって他のサイトを見るときの見方というものが変わったような気がしました。今まで何気なくみていたサイトが、こんなにも苦労を重ねて作られていたものだったとは思いましませんでした。Webコンテンツ作成の授業全体を 通して、初めての作業が多かったため、授業の資料を読んでも理解できないことが多々ありました。その都度、先輩や先生に質問をしたり、もっと深く資料を読むことで理解を 深めることができたと思います。また、今後Webページを作成する機会が来たら、この授業で学んだWebページ作成の方法を役立てたいと思います。自分は他の人よりも理解する スピードが遅く、遅れをとってしまっていると実感しています。従って人よりも多く経験を積む必要があると思うので、これから努力していきたいです。そして、いつかこの技術を活かせるような進路を見つけて、やったことを無駄にしないようにしたいと思いました。 </p>
   </body>
 </html>
