--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
       <option value=" 2968815">パリ（フランス）</option>
       <option value=" 3451189">リオデジャネイロ（プラジル）</option>
       <option value="5128581">ニューヨーク（アメリカ合衆国）</option>
-      <option value="'5368361">ロサンゼルス（アメリカ合来国）</option>
+      <option value="'5368361">ロサンゼルス（アメリカ合衆国）</option>
     </select>
 
       <button id="botton">検索</button>
