--- a/index.html
+++ b/index.html
@@ -1,67 +1,45 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>my test page</title>
-    <link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-    <p><h1>「WEBコンテンツの作成」の成果</h1></p>
-    <p><h2>本テーマについて</h2></p>
-    <p>HTML、CSS、JavaScriptを使って、webページの構造の記述、文字の大きさや色などの見た目の変更、 画像などの追加をします。そして、DOMを使って、コンテンツの内容を読み取ったり、変更をしたり、 ボタンや、テキスト入力の追加などをして、webを作成します。</p>
-    <p>プロジェクト課題で作成したページ：<a  href="project.html" title="プロジェクト課題" target="_blank">project.html </a>  </p>
-    <p><h2>数当てゲーム</h2></p>
-    <p>ランダムに生成される数字と自分が入力した数字を合わせるゲームです。まず、1~10の数字を入力してください。すると、プログラムが正誤判定をしてくれます。あっていれば『正解!』と表示され、間違っていたら入力した数が答えより小さい、または大きいかを教えてくれます。そのチャンスをもとに答えを求めましょう!チャンスは3回までです。</p>
-    <p>演習の成果:
-      <a  href="kazuate.html"
-           title="数当てゲーム" 
-        target="_blank">数当てゲーム
-      </a>  
-   </p>
-    <p><h2>各授業回の学習事項</h2></p>
-    <p><h3>第1回WWWとHTML</h3></p>
-    <p>この回では文字の大きさの変化の仕方、二種類の箇条書きの入力の仕方、リンクの貼り方、画像の貼り付け方などを学びました。また、いくつかの要素とその編集の仕方や、ギットハブへの保存の仕方及びページの表示のさせ方なども学びました。
-    </p>
-    <p>演習の成果:
-      <a  href="practice-html/elements.html"
-          title="演習1-4" 
-        target="_blank">演習1-4のさまざまな要素 
-      </a>   
-    </p>
-    <p><h2>第2回CSSによるWebページの装飾</h2></p>
-    <p>この回では、cssでの文字の色の変え方、書体の変え方、影の付け方、その影の位置や色の変え方、枠の作り方とその枠のレイアウトの変え方、リンクの色の変え方、リンクに入ると、リンクの色を変えるようにするやり方、背景の色の変え方などを学びました。</p>
-    <p>演習の成果:
-      <a  href="practice-css/browser-intro.html"
-          title="練習2-3" 
-        target="_blank">練習2-3
-      </a>   
-    </p>
-    <p><h2>第3回JavaScriptの基本</h2></p>
-    <p>この回では、wedページを作る上で必要なJavaScriptについて学びました。オブジェクトの参照と代入や、配列の要素の一つずつに対して処理を行うfor-of構文、プログラムのデバッグなど、基本的なことでしたが、javaと構文が似てるものがあるとはいえ、かなり難しく、慣れるためには、もっと時間と練習が必要だと感じました。</p>
-    <p>演習の成果:
-      <a  href="practice-js/obj-practice.html"
-          title="練習3-6" 
-        target="_blank"> 練習3-6
-      </a>   
-    </p>
-    <p><h2>第4回 DOM と JavaScript</h2></p>
-    <p>この回では、DOMの基礎知識を学びました。DOMはDocument Object Modelの略でhtmlやcssをjavascriptから書き換えることができるプログラムのことであり、document.createElement構文を使用することで新しい要素を作成したり、setAttribute構文でhrefやsrcなどの属性を自由に設定することができます。 今回は近くの人と助け合いなんとか終わったという感じだったので、プログラムの意味を理解できるようになりたいと思いました。 </p>
-    <p>演習の成果:
-      <a  href="practice-dom/dom-exercise.html"
-          title="練習4-2,4-5" 
-        target="_blank"> 練習4-2,4-5
-      </a>
-    </p>
-    <p><h2>第5回イベント処理</h2></p>
-    <p>この回では、ボタン、テキストボックスなどを追加するものを作りました。まず、イベントハンドラを登録が必要で、○.addEventListener('△△', □□);というプログラムを使います。 その後、イベントハンドラの定義をプログラムします。○.addEventListener('△△', □□); △△を変えることで、クリックで変化したり、キーボードで表示が変化したりします。 </p>
-    <p>演習の成果:
-      <a  href="practice-event/event-list.html"
-          title="練習問題5-3" 
-        target="_blank"> 練習問題5-3
-      </a>
-
-    </p>
-    <p><h2>第6回 工夫点、苦心点、強調点、感想</h2></p>
-    <p>この講義では合計6回に分けて一つのWEBページを作成しました。HTML、CSS、JavaScriptを使って、webページを作りました。初めてこれらを使ってwebページを作ったので、かなり苦労するところや、面白いなと思うものもたくさんありました。私が一番苦労したのは、第4回のDOMの演習と、数あてです。第4回の演習の方では、何を打ち込めばいいのかがわからなかったり、そもそも今何をしたいのかがわからなかったりと、とても苦労しました。また、画像を貼り付ける際に変なところに出てきたり、大きさが合わなかったりで大変でした。最初の頃は、HTMLでのwebの構成で簡単なのかもと思っていましたが、進めていくうちにどんどん内容が複雑になっていって、domのところからはもう全くわからなくなりました。数あては、何度も試行を繰り返し、時にパソコンにムカつきながら取り組んでいました。しかし、先生や先輩方の助けもあってなんとか終えることができました。 プロジェクト課題では、天気がなかなか表示されず苦労しました。最初は自分一人じゃとてもじゃないけど終わらないと思っていましたが、最終的には自分が思っていた以上にいいwebサイトができたのではないかと思いました。自分的には、都市名の表示で国旗が表示されたり、最高、最低気温の表示のされ方で、何度以下だったらこれを表示するみたいなものができたらもう少しいいものができたのではないかと感じました。自分でサイトを作ってみたことによって他のサイトを見るときの見方というものが変わったような気がしました。今まで何気なくみていたサイトが、こんなにも苦労を重ねて作られていたものだったとは思いましませんでした。Webコンテンツ作成の授業全体を 通して、初めての作業が多かったため、授業の資料を読んでも理解できないことが多々ありました。その都度、先輩や先生に質問をしたり、もっと深く資料を読むことで理解を 深めることができたと思います。また、今後Webページを作成する機会が来たら、この授業で学んだWebページ作成の方法を役立てたいと思います。自分は他の人よりも理解する スピードが遅く、遅れをとってしまっていると実感しています。従って人よりも多く経験を積む必要があると思うので、これから努力していきたいです。そして、いつかこの技術を活かせるような進路を見つけて、やったことを無駄にしないようにしたいと思いました。 </p>
-  </body>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>模擬ログインページ（課題用）</title>
+  <meta name="robots" content="noindex">
+  <style>
+    body {
+      font-family: sans-serif;
+      background-color: #f8f9fa;
+      text-align: center;
+      margin-top: 50px;
+    }
+    .container {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      display: inline-block;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    input {
+      padding: 10px;
+      margin: 10px;
+      width: 80%;
+    }
+    .note {
+      color: red;
+      font-size: 0.9em;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h2>模擬ログインページ</h2>
+    <p><strong>※これは教育目的の模擬ページであり、実際に情報を送信しません。騙す意図はありません。</strong></p>
+    <form onsubmit="alert('これは模擬ページです。情報は送信されません。'); return false;">
+      <input type="text" name="user" placeholder="ユーザー名"><br>
+      <input type="password" name="pass" placeholder="パスワード"><br>
+      <input type="submit" value="ログイン">
+    </form>
+    <p class="note">このページはセキュリティ教育課題のために作成されたものです。</p>
+  </div>
+</body>
 </html>
